[gd_scene format=3 uid="uid://d4a77wghiburn"]

[ext_resource type="Texture2D" uid="uid://cxverr0r1wqk5" path="res://assets/bubble.png" id="1_fgkus"]
[ext_resource type="Script" uid="uid://c2uv5pai24dhg" path="res://scenes/title_screen.gd" id="1_mgrm8"]
[ext_resource type="Texture2D" uid="uid://oa478un41oq0" path="res://assets/water_animation/LogoFinalWater.png" id="1_s4lrb"]
[ext_resource type="Texture2D" uid="uid://cp8q7pkoxlnk7" path="res://assets/Button.png" id="1_sa3yf"]
[ext_resource type="Texture2D" uid="uid://vf50rv3ak4nw" path="res://assets/map/pond.png" id="2_cs5ya"]
[ext_resource type="Texture2D" uid="uid://b4bf1wpslo0k1" path="res://assets/map/tiny_pond.png" id="3_mykxm"]
[ext_resource type="Texture2D" uid="uid://blmsxq58itwp1" path="res://assets/map/hill.png" id="4_tklts"]
[ext_resource type="Texture2D" uid="uid://bgo6ok31negdi" path="res://assets/water_animation/Water Animation.png" id="5_dc4i4"]

[sub_resource type="Gradient" id="Gradient_0ld40"]
colors = PackedColorArray(0.2637845, 0.3125289, 0.38076746, 1, 0.36862746, 0.48235294, 0.64705884, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cs5ya"]
gradient = SubResource("Gradient_0ld40")
fill_from = Vector2(1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_khjys"]
atlas = ExtResource("1_s4lrb")
region = Rect2(0, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_174rq"]
atlas = ExtResource("1_s4lrb")
region = Rect2(1152, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrxh4"]
atlas = ExtResource("1_s4lrb")
region = Rect2(2304, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_neciy"]
atlas = ExtResource("1_s4lrb")
region = Rect2(3456, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_w03br"]
atlas = ExtResource("1_s4lrb")
region = Rect2(4608, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr68i"]
atlas = ExtResource("1_s4lrb")
region = Rect2(5760, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_b344i"]
atlas = ExtResource("1_s4lrb")
region = Rect2(6912, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm4k0"]
atlas = ExtResource("1_s4lrb")
region = Rect2(8064, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_mce2t"]
atlas = ExtResource("1_s4lrb")
region = Rect2(9216, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_htdhw"]
atlas = ExtResource("1_s4lrb")
region = Rect2(10368, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_12ga3"]
atlas = ExtResource("1_s4lrb")
region = Rect2(11520, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrrko"]
atlas = ExtResource("1_s4lrb")
region = Rect2(12672, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_aidx5"]
atlas = ExtResource("1_s4lrb")
region = Rect2(13824, 0, 1152, 648)

[sub_resource type="SpriteFrames" id="SpriteFrames_ycxnk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khjys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_174rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrxh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neciy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w03br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr68i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b344i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm4k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mce2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htdhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ga3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrrko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aidx5")
}],
"loop": false,
"name": &"logo",
"speed": 5.0
}]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_sa3yf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sa3yf"]
atlas = ExtResource("1_fgkus")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4lrb"]
atlas = ExtResource("1_fgkus")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgrm8"]
atlas = ExtResource("1_fgkus")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc4i4"]
atlas = ExtResource("1_fgkus")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e54dn"]
atlas = ExtResource("1_fgkus")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yumr"]
atlas = ExtResource("1_fgkus")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs5ya"]
atlas = ExtResource("1_fgkus")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_mykxm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa3yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4lrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgrm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc4i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e54dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yumr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}],
"loop": true,
"name": &"bubble",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mykxm"]
atlas = ExtResource("5_dc4i4")
region = Rect2(0, 0, 100, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_tklts"]
atlas = ExtResource("5_dc4i4")
region = Rect2(100, 0, 100, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_u26n3"]
atlas = ExtResource("5_dc4i4")
region = Rect2(200, 0, 100, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib7db"]
atlas = ExtResource("5_dc4i4")
region = Rect2(300, 0, 100, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_frs5l"]
atlas = ExtResource("5_dc4i4")
region = Rect2(400, 0, 100, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_mynnq"]
atlas = ExtResource("5_dc4i4")
region = Rect2(500, 0, 100, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8tpv"]
atlas = ExtResource("5_dc4i4")
region = Rect2(600, 0, 100, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qe4i"]
atlas = ExtResource("5_dc4i4")
region = Rect2(700, 0, 100, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07av"]
atlas = ExtResource("5_dc4i4")
region = Rect2(800, 0, 100, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_khjys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mykxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tklts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u26n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib7db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frs5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mynnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8tpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qe4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07av")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="TitleScreen" type="CanvasLayer" unique_id=1584515081]
layer = 5
script = ExtResource("1_mgrm8")

[node name="Control" type="Control" parent="." unique_id=791214434]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control" unique_id=325403900]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_cs5ya")

[node name="HBoxContainer" type="HBoxContainer" parent="Control" unique_id=416829635]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -1186.0
offset_right = 80.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer" unique_id=1902582508]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_cs5ya")

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer" unique_id=477656457]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_mykxm")

[node name="TextureRect3" type="TextureRect" parent="Control/HBoxContainer" unique_id=2069105577]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_tklts")

[node name="TileMapContainer" type="Control" parent="Control" unique_id=1071210706]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main Menu" type="VBoxContainer" parent="Control" unique_id=1000495239]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -179.0
offset_right = 150.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0010442118
theme_override_constants/separation = 10
alignment = 2

[node name="Logo" type="Control" parent="Control/Main Menu" unique_id=1262006169]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="Node2D" type="Node2D" parent="Control/Main Menu" unique_id=1907058902]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control/Main Menu/Node2D" unique_id=929984203]
position = Vector2(131.90387, 92.1378)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ycxnk")
animation = &"logo"
autoplay = "logo"
frame_progress = 0.102407396

[node name="Play" type="TextureButton" parent="Control/Main Menu" unique_id=820466509]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("1_sa3yf")
texture_pressed = SubResource("AnimatedTexture_sa3yf")

[node name="Label" type="Label" parent="Control/Main Menu/Play" unique_id=943858941]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 39
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="Control/Main Menu" unique_id=1891959710]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("1_sa3yf")
texture_pressed = SubResource("AnimatedTexture_sa3yf")

[node name="Label" type="Label" parent="Control/Main Menu/Quit" unique_id=382440637]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 39
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="." unique_id=1805249647]
layout_mode = 3
anchors_preset = 0
offset_right = 1145.0
offset_bottom = 638.0
mouse_filter = 2

[node name="Bubbles" type="AnimatedSprite2D" parent="Control2" unique_id=916511788]
position = Vector2(182, 62)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_mykxm")
animation = &"bubble"
autoplay = "bubble"

[node name="Bubbles2" type="AnimatedSprite2D" parent="Control2" unique_id=2016093410]
position = Vector2(1014, 495.00003)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_mykxm")
animation = &"bubble"
autoplay = "bubble"
frame = 2

[node name="Bubbles3" type="AnimatedSprite2D" parent="Control2" unique_id=1449660801]
position = Vector2(178, 468)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_mykxm")
animation = &"bubble"
autoplay = "bubble"
frame = 4

[node name="Bubbles4" type="AnimatedSprite2D" parent="Control2" unique_id=1346679379]
position = Vector2(946, 101)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_mykxm")
animation = &"bubble"
autoplay = "bubble"
frame = 6

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1392331708]
visible = false
position = Vector2(576, 324)
scale = Vector2(13, 13)
sprite_frames = SubResource("SpriteFrames_khjys")

[connection signal="pressed" from="Control/Main Menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/Main Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
